[package]
name = "presto-rp2350-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
cyw43 = { version = "0.2.0" }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = [
    "rp235xb",
    "binary-info",
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
smart-leds = "0.4.0"

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
